--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,41 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.afinal">
 
     <application
         android:allowBackup="true"
         android:label="校園導覽系統"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        tools:targetApi="31">
 
-        <activity
-            android:name=".MenuActivity"
-            android:exported="false" />
+        <activity android:name=".CampusMapActivity" />
+        <activity android:name=".AdminSearchActivity" />
+        <activity android:name=".RouteActivity" />
+        <activity android:name=".ScheduleActivity" />
+        <activity android:name=".SpotActivity" />
+        <activity android:name=".FoodActivity" />
 
-        <activity
-            android:name=".LocationActivity"
-            android:exported="false" />
 
-        <activity
-            android:name=".CampusMapActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".RouteActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".WeatherActivity"
-            android:exported="false" />
-
+        <!-- 啟動頁 -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+    </application>
 
 </manifest>
